[package]
name = "project1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.3.2"
crypto-hash = "0.3.3"
clippy = {version = "*", optional = true}
rust-crypto = "0.2"
rustc-serialize = "0.3"
bloom = "0.3.2"
bloomfilter = "1.0.9"
merkletree= "0.22.1"
sha2 = "0.10.6"
merkle-cbt = "0.3.2"

